FEATURE #68227 - Change mouse cursor to poiter for sort indicators

--- a/app/assets/stylesheets/grid_overrides.scss
+++ b/app/assets/stylesheets/grid_overrides.scss
@@ -48,6 +48,7 @@ $pager_background: #efeff0;
   height: 8px;
   background: none;
   opacity: 0;
+  cursor: pointer;
   i.material-icons {
     font-size: 16px;
   }
