--- a/app/views/index.html.haml
+++ b/app/views/index.html.haml
@@ -3,6 +3,8 @@
     = render :partial => '/grid', :locals => {:grid => component} if component.is_grid?
     = render :partial => '/panel', :locals => {:panel => component} if component.is_panel?
     - break if component.respond_to?(:fill_window?) and component.fill_window?
+  :javascript
+    saveMessage("#{params[:screen]} loaded", 'info');
 - else
   = render '/header'
   = render '/menu'
