FEATURE #68702 - Change color to green for status with filters

--- a/app/assets/stylesheets/grid_overrides.scss
+++ b/app/assets/stylesheets/grid_overrides.scss
@@ -204,6 +204,11 @@ $pager_background: #efeff0;
   border: 0;
   background: white;
   font-size: 12px;
+  .slick-pager-status.with-filter, .slick-pager-clear-filter {
+    color: #43a047;
+    display: inline-block;
+    padding: 6px;
+  }
 }
 
 /* datapicker */
