--- a/app/assets/stylesheets/grid_overrides.scss
+++ b/app/assets/stylesheets/grid_overrides.scss
@@ -208,6 +208,13 @@ $pager_background: #efeff0;
     color: #43a047;
     display: inline-block;
     padding: 6px;
+    .material-icons {
+      font-size: 16px;
+      padding: 1px 5px 0 0;
+    }
+    span {
+      float: right;
+    }
   }
 }
 
