--- a/app/assets/stylesheets/grid_overrides.scss
+++ b/app/assets/stylesheets/grid_overrides.scss
@@ -86,9 +86,6 @@ $pager_background: #efeff0;
   &.master_flashing {
     background-color: pink;
   }
-  &.filtered {
-    background: rgba(194, 214, 196, 0.7);;
-  }
   &.selected {
     background: rgba(#b6dbf1, 0.7);
     margin-top: -1px;
@@ -131,11 +128,17 @@ $pager_background: #efeff0;
   .slick-cell.loading {
     background: linear-gradient(to right, #f7f7f7 8%, #ecf2f4 18%, #f7f7f7 33%);
   }
+  .slick-cell.filtered {
+    background: rgba(222, 235, 223, 1.0);
+  }
 }
 
 .slick-row.odd {
   .slick-cell.loading {
     background: linear-gradient(to right, #e5e3e9 8%, #dddddd 18%, #e5e3e9 33%);
+  }
+  .slick-cell.filtered {
+    background: rgba(232, 245, 233, 1.0);
   }
 }
 
@@ -155,13 +158,12 @@ $pager_background: #efeff0;
   animation-iteration-count: infinite;
   animation-name: placeHolderShimmer;
   animation-timing-function: linear;
-  // background: linear-gradient(to right, #e5ebed 8%, #dddddd 18%, #e5ebed 33%);
   background-size: 800px 104px;
   height: 96px;
 }
 
 .slick-cell, .slick-headerrow-column , .slick-footerrow-column {
-  border: 1px solid transparent;
+  border-right: none;
 }
 
 .ui-widget-content.slick-row.ui-state-active.selected {
