FEATURE #68702 - Change color to green for header's label and input border

--- a/app/assets/stylesheets/grid_overrides.scss
+++ b/app/assets/stylesheets/grid_overrides.scss
@@ -17,6 +17,12 @@ $pager_background: #efeff0;
     label {
       top: 25px;
     }
+    label.active {
+      color: #43a047;
+    }
+    input[type=text] {
+      border-bottom-color: #43a047;
+    }
   }
   .progress {
     bottom: -0.4rem;
