--- a/app/assets/stylesheets/grid_overrides.scss
+++ b/app/assets/stylesheets/grid_overrides.scss
@@ -129,6 +129,13 @@ $pager_background: #efeff0;
   }
 }
 
+.slick-row.loading {
+  border-bottom: 1px solid silver;
+  .slick-cell.loading {
+    border: none;
+  }
+}
+
 .slick-row.even {
   .slick-cell.loading {
     background: linear-gradient(to right, #f7f7f7 8%, #ecf2f4 18%, #f7f7f7 33%);
