FEATURE #68779 - Change grid header background color to blue when multi rows selected

--- a/app/assets/stylesheets/toolbar.scss
+++ b/app/assets/stylesheets/toolbar.scss
@@ -81,6 +81,10 @@ $toolbar_button_height: 30px;
   }
 }
 
+.grid-header.multi-selected {
+  background-color: #E3F2FD;
+}
+
 // .toolbar_icon_filter {
 //   background: image-url("ui/search_icon.png") no-repeat top center;
 // }
