--- a/app/assets/stylesheets/grid_overrides.scss
+++ b/app/assets/stylesheets/grid_overrides.scss
@@ -111,8 +111,12 @@ $pager_background: #efeff0;
     box-shadow: none;
     font-size: .9rem;
   }
+  input[type=text]:not(.browser-defaul) {
+    height: 100%;
+    margin-bottom: 5px;
+  }
   .autocomplete-content {
-    margin-top: 10px;
+    margin-top: 5px;
     margin-left: -2px;
     width: 102%;
   }
