FEATURE #68702 - MD implement for Grid Filter: Active cell has same background color to selected one

--- a/app/assets/stylesheets/grid_overrides.scss
+++ b/app/assets/stylesheets/grid_overrides.scss
@@ -100,8 +100,7 @@ $pager_background: #efeff0;
   }
   &.active {
     margin-top: -1px;
-    border: #88bcfb solid 1px;
-    background-color: rgba(#c2e8ff, 0.7);
+    border: #2196F3 solid 1px;
   }
   &.editable {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
