BUG #68792 - Give status bar enough height to show

--- a/app/assets/stylesheets/grid_overrides.scss
+++ b/app/assets/stylesheets/grid_overrides.scss
@@ -16,6 +16,7 @@ $pager_background: #efeff0;
 
 .slick-header.ui-state-default {
   border-bottom: 1px solid $grid_border_color;
+  padding-top: 10px;
 }
 
 .slick-header {
