--- a/app/views/_content.html.haml
+++ b/app/views/_content.html.haml
@@ -10,4 +10,4 @@
     #confirm-content Are you sure to do this ?
   .modal-footer
     #confirmed-btn.btn.right Yes
-    .modal-close.btn-flat No
+    .modal-close.btn-flat.waves-effect No
