--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -1,6 +1,7 @@
 @import "base";
 
-$menu_width: 200px;
+$menu_width: 250px;
+$menu_item_active_text: #2196F3;
 
 .extended-panel {
   left: 0px !important;
@@ -109,14 +110,13 @@ $menu_width: 200px;
             align-items: center;
             span {
               padding-left: 10px;
+              font-size: 12px;
             }
           }
         }
         .item.active {
-          background-color: $menu_item_active_background;
           a {
             color: $menu_item_active_text;
-            @include text-shadow(black, 1px, 1px, 0);
           }
         }
       }
@@ -164,35 +164,6 @@ $menu_width: 200px;
     width: $menu_width;
     h2 {
       margin-bottom: 0;
-    }
-    #indicators {
-      .loading_indicator {
-        margin-left: 10px;
-        width: 180px;
-        color: #717167;
-        font-size: 11px;
-        .loading_text {
-          margin-top: 5px;
-          margin-left: 6px;
-          //:text-transform uppercase
-          //:font-weight bold
-
-        }
-        .loading_bar {
-          margin-top: 0px;
-          height: 16px;
-          background: image-url("ui/load_indicator_bar_small.gif") no-repeat;
-          // :margin-left      auto
-          // :margin-right     auto
-
-        }
-        .loading_stats {
-          font-size: 9px;
-          // :text-align center
-          // :margin-top -3px
-          margin-left: 6px;
-        }
-      }
     }
   }
 }
