--- a/app/views/_menu.html.haml
+++ b/app/views/_menu.html.haml
@@ -4,16 +4,16 @@
       - controller.menu.each do |menu_entry|
         - if menu_entry.is_submenu?
           %li.submenu
-            %a{:href => "#"}
+            %a{href: "#"}
               = menu_entry.title
             %ul
               - menu_entry.each do |submenu_entry|
                 %li.item{:style => submenu_entry.is_hidden? ? "display:none" : ""}
-                  = link_to submenu_entry.path, data: {'active-url': submenu_entry.active_paths} do
+                  = link_to submenu_entry.path do
                     %i.material-icons= submenu_entry.options[:material_icon] || 'crop_16_9'
                     %span= submenu_entry.title
         - else
-          %li.item= link_to menu_entry.title, menu_entry.path, data: {'active-url' => menu_entry.active_paths}
+          %li.item= link_to menu_entry.title, menu_entry.path
 
 -# #navigation
 -#   #nav_toggle.open.transparent
