--- a/app/views/_header.html.haml
+++ b/app/views/_header.html.haml
@@ -26,23 +26,24 @@
             %i.material-icons account_circle
             %span= current_user.email
 
-#help-modal.modal
-  .modal-header
-    %span#help-title Help
-    %i.modal-close.material-icons.right close
-  .modal-content
-    %ul#help-list
-      - wikis.each do |wiki|
-        - wiki_title = (wiki.screen_name || '') + (wiki.grid_name ? ' - ' + wiki.grid_name : '')
-        %li
-          %a{"data-wiki-content" => wiki.content, "data-wiki-title" => wiki_title, href: '#'}
-            %i.material-icons.left live_help
-            %span= wiki_title
-    #help-content-container.hide
-      #help-content
-      %a#help-menu-link{href: '#'}
-        %i.material-icons dns
-        %span BROWSE ALL ARTICLES
+- if wikis
+  #help-modal.modal
+    .modal-header
+      %span#help-title Help
+      %i.modal-close.material-icons.right close
+    .modal-content
+      %ul#help-list
+        - wikis.each do |wiki|
+          - wiki_title = (wiki.screen_name || '') + (wiki.grid_name ? ' - ' + wiki.grid_name : '')
+          %li
+            %a{"data-wiki-content" => wiki.content, "data-wiki-title" => wiki_title, href: '#'}
+              %i.material-icons.left live_help
+              %span= wiki_title
+      #help-content-container.hide
+        #help-content
+        %a#help-menu-link{href: '#'}
+          %i.material-icons dns
+          %span BROWSE ALL ARTICLES
 
 :javascript
 
