--- a/app/assets/stylesheets/toolbar.scss
+++ b/app/assets/stylesheets/toolbar.scss
@@ -85,90 +85,10 @@ $toolbar_button_height: 30px;
   background-color: #E3F2FD;
 }
 
-// .toolbar_icon_filter {
-//   background: image-url("ui/search_icon.png") no-repeat top center;
-// }
-//
-// .toolbar_icon_refresh {
-//   background: image-url("ui/refresh_icon.png") no-repeat top center;
-// }
-//
-// .toolbar_icon_delete_x {
-//   background: image-url("ui/delete_icon_x.png") no-repeat top center;
-// }
-//
-// .toolbar_icon_delete {
-//   background: image-url("ui/delete_icon_trash.png") no-repeat top center;
-// }
-//
-// .toolbar_icon_add {
-//   background: image-url("ui/create_icon.png") no-repeat top center;
-// }
-//
-// .toolbar_icon_send_mail {
-//   background: image-url('ui/mail_icon.png') no-repeat top center;
-// }
-//
-// .toolbar_icon_edit {
-//   background: image-url("ui/batch_update.png") no-repeat top center;
-// }
-//
-// .toolbar_icon_batch_edit {
-//   background: image-url("ui/form_edit_icon.png") no-repeat top center;
-// }
-//
-// .toolbar_icon_toggle {
-//   background: image-url("ui/toggle_icon.png") no-repeat top center;
-// }
-//
-// .toolbar_icon_sync {
-//   background: image-url("ui/sync_icon.png") no-repeat top center;
-// }
-//
-// .toolbar_icon_remove {
-//   background: image-url("ui/remove_icon.png") no-repeat top center;
-// }
-
 .toolbar_icon_disabled {
-  @include opacity(0.4);
+  color: #8dcdeb;
   cursor: default !important;
 }
-
-// .toolbar_icon_link {
-//   background: image-url("ui/link_icon.png") no-repeat top center;
-// }
-//
-// .toolbar_icon_unlink {
-//   background: image-url("ui/unlink_icon.png") no-repeat top center;
-// }
-//
-// .toolbar_icon_wizard {
-//   background: image-url("ui/wizard_icon.png") no-repeat top center;
-// }
-//
-// .toolbar_icon_allocation {
-//   background: image-url("ui/allocation_icon.png") no-repeat top center;
-// }
-//
-// .toolbar_icon_all {
-//   background: image-url("ui/all_icon.png") no-repeat top center;
-// }
-//
-// .toolbar_icon_grid {
-//   background: image-url("ui/grid_icon.png") no-repeat top center;
-// }
-//
-// .toolbar_icon_clock {
-//   background: image-url("ui/clock_icon.png") no-repeat top center;
-// }
-//
-// .toolbar_icon_pdf {
-//   background: image-url("ui/pdf_icon.png") no-repeat top center;
-// }
-//
-// .toolbar_icon_swap {
-//   background: image-url("ui/swap_icon.png") no-repeat top center;
-// }
 
 .add_detail_action {
   min-width: 75px;
