--- a/app/assets/stylesheets/grid_overrides.scss
+++ b/app/assets/stylesheets/grid_overrides.scss
@@ -20,6 +20,7 @@ $pager_background: #efeff0;
   .slick-header-column.input-field {
     label {
       top: 20px;
+      font-size: 0.9rem;
     }
     input[type=text] {
       margin-bottom: none;
