FEATURE #69673 - MD Implementation for Attach Form: Layout

--- a/app/assets/stylesheets/grid_form.scss
+++ b/app/assets/stylesheets/grid_form.scss
@@ -22,6 +22,28 @@
   }
 }
 
+.attach-modal.modal.modal-fixed-footer {
+  .slick-header-column.input-field label {
+    top: 15px;
+  }
+  .modal-content {
+    position: static;
+    padding: 0;
+    height: auto !important;
+    .grid_container {
+      border: none;
+      .grid-header {
+        padding-top: 20px;
+        h2 {
+          padding-top: 0;
+          padding-left: 15px;
+          margin-top: 0;
+        }
+      }
+    }
+  }
+}
+
 // .create_form {
 //   display: none;
 //   // background-color: #ededed !important;
