--- a/app/assets/stylesheets/materialize_custome.scss
+++ b/app/assets/stylesheets/materialize_custome.scss
@@ -1,3 +1,12 @@
+.modal-header {
+  padding: 1rem;
+  background-color: dodgerblue;
+  color: white;
+  span {
+    font-size: 1.3rem;
+  }
+}
+
 nav {
   background-color: dodgerblue;
 
