FEATURE #69658 - Use material buttons for switch button

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -382,12 +382,23 @@
 //   background-color: #080808 \9;
 // }
 
-span.switch_btn {
-  background: image-url('ui/switch_icon.png') no-repeat top center;
+// span.switch_btn {
+//   background: image-url('ui/switch_icon.png') no-repeat top center;
+//   display: block;
+//   width: 30px;
+//   height: 24px;
+//   margin-top: 15px;
+//   margin-left: auto;
+//   margin-right: auto;
+//   cursor: pointer;
+//   &[disabled] {
+//     cursor: default;
+//     opacity: 0.4;
+//   }
+// }
+
+.switch_btn {
   display: block;
-  width: 30px;
-  height: 24px;
-  margin-top: 15px;
   margin-left: auto;
   margin-right: auto;
   cursor: pointer;
