FEATURE #69658 - Add left padding to the first column of grid

--- a/app/assets/stylesheets/panel.scss
+++ b/app/assets/stylesheets/panel.scss
@@ -3,8 +3,8 @@
 .panel_container {
   float: left;
   fieldset.panel_wrapper {
-    height: 99%;
-    margin: 1%;
+    height: 101%;
+    margin: -1% 0 0 0;
     padding: 0;
     position: relative;
     .panel_btns {
