--- a/app/assets/stylesheets/SlickGrid/slick.pager.scss
+++ b/app/assets/stylesheets/SlickGrid/slick.pager.scss
@@ -1,6 +1,7 @@
 .slick-pager {
   width: 100%;
   height: 26px;
+  padding-left: 6px;
   border: 1px solid gray;
   border-top: 0;
   background: url('../images/header-columns-bg.gif') repeat-x center bottom;
