--- a/app/assets/stylesheets/grid_overrides.scss
+++ b/app/assets/stylesheets/grid_overrides.scss
@@ -1,4 +1,5 @@
 @import "base";
+@import 'materialize/components/color';
 
 $column_header_height: 52px;
 $column_header_padding: 4px;
@@ -14,7 +15,9 @@ $pager_background: #efeff0;
 
 // Color themes
 $themes: (
-  theme-teal: #009688
+  theme-teal: color('teal', 'base'),
+  theme-blue-grey: color('blue-grey', 'base'),
+  theme-indigo: color('indigo', 'lighten-1')
 );
 
 // Helper theme mixin
