FEATURE #69960 - Apply color theme to selection rows of both master & detail grid

--- a/app/assets/stylesheets/grid_overrides.scss
+++ b/app/assets/stylesheets/grid_overrides.scss
@@ -40,6 +40,14 @@ $themes: (
     .slick-pager-status {
       color: $color;
     }
+    .slick-cell {
+      &.selected {
+        background: lighten($color, 60%);
+      }
+      &.active {
+        border: $color solid 1px;
+      }
+    }
   }
 }
 
