--- a/app/views/_content.html.haml
+++ b/app/views/_content.html.haml
@@ -9,5 +9,12 @@
     %h5.modal-title Confirmation
     #confirm-content.modal-message Are you sure to do this ?
   .modal-footer
-    #confirmed-btn.btn.right Yes
+    #confirmed-btn.btn.right.modal-close Yes
     .modal-close.btn-flat.waves-effect No
+
+#error-modal.info-modal.modal
+  .modal-content
+    %h5.modal-title Error
+    #error-content.modal-message Something happened.
+  .modal-footer
+    .modal-close.btn.right OK
