--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -101,6 +101,7 @@ $menu_item_active_text: #2196F3;
         }
         .item {
           padding-left: 9px;
+          padding-top: 10px;
           margin-left: -10px;
           a {
             text-transform: none;
