FEATURE #70219 - MD Implementation - Copy button in Grid State screen

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -414,8 +414,7 @@
     margin-left: auto;
     margin-right: auto;
   }
-  span.copy_btn {
-    background: image-url('copy.png') no-repeat top center;
+  i.copy_btn {
     width: 32px;
     height: 32px;
     margin-top: 15px;
