--- a/app/assets/stylesheets/toolbar.scss
+++ b/app/assets/stylesheets/toolbar.scss
@@ -16,6 +16,8 @@ $toolbar_button_height: 30px;
     float: left;
   }
   .selection-info {
+    position: absolute;
+    margin-top: 8px;
     padding-left: 20px;
     font-size: 12px;
     color: #039be5;
